# us-stock-candle-gainers

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
app/: exceptions.py  main.py
app/models/: __init__.py  candle.py  pattern_search.py  request.py  response.py  risk.py  screener.py  trade_prompt.py
app/routers/: analyze.py  pattern_search.py  risk.py  screener.py  trade_prompt.py
app/services/: pattern_detector.py  pattern_registry.py  pattern_search_service.py  prompt_generator.py  risk_analyzer.py  screener_service.py  simulation.py  stock_data.py  ticker_pattern_service.py
app/services/patterns/: __init__.py  (+6 more)
docs/: api-reference.md  architecture.md  candlestick_patterns.md  features.md
static/: index.html  pattern-search.html  screener.html
tests/: conftest.py  test_analyze_router.py  test_edge_cases.py  test_helpers.py  test_main.py  test_mode_logic.py  test_models.py  test_one_candle.py  test_pattern_detector.py  test_pattern_registry.py  test_pattern_search_models.py  test_pattern_search_router.py  test_pattern_search_service.py  test_predicted.py  test_prompt_generator.py  test_risk_analyzer.py  test_risk_router.py  test_screener_models.py  test_screener_router.py  test_screener_service.py  test_simulation.py  test_static_router.py  test_stock_data.py  test_stock_data_news.py  test_stock_data_short_interest.py  test_three_candle_bearish.py  test_three_candle_bullish.py  test_trade_prompt_endpoint.py  test_trade_prompt_models.py  test_two_candle_bearish.py  test_two_candle_bullish.py
tests/e2e/: conftest.py  test_pages.py
